<resources>
    <string name="app_name">Finance Manager</string>
    <string name="ok">OK</string>
    <string name="num1">Numero 1</string>
    <string name="num2">Numero 2</string>
    <string name="somar">Somar</string>
    <string name="salvar">Salvar</string>
    <string name="foto">Tirar Foto</string>
    <string name="selecione">Selecione...</string>

    <!--Tela de cadastro-->
    <string name="cadastro.nome">Nome </string>
    <string name="lbl_email">Email </string>
    <string name="cadastro.funcao">Função </string>
    <string name="cadastro.sexo">Sexo: </string>
    <string name="cadastro.masc">Masculino </string>
    <string name="cadastro.fem">Feminino </string>
    <string name="cadastro.hobbie">Hobbies: </string>
    <string name="cadastro.dancar">Dançar</string>
    <string name="cadastro.ler">Ler</string>
    <string name="cadastro.viajar">Viajar</string>

    <!--Tela de login-->
    <string name="lbl_senha">Senha</string>
    <string name="btn_login">Login</string>
    <string name="conta">Não tem conta ainda? Crie uma.</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="faca_login">Já é Membro? Faça Login</string>
    <string name="receita">Incluir Receita</string>
    <string name="despesa">Incluir Despesa</string>

    <!--Tela de Add Receitas e Despesas-->
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="parcelas">Quantida de Parcelas</string>
    <string name="tipo_despesa">Tipo de Despesas</string>
    <string name="tipo_receita">Tipo de Receitas</string>
    <string name="data">Data</string>

    <!--Meses-->
    <string name="janeiro">Janeiro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista">ListaActivity</string>
</resources>
