<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/padding_top"
    tools:context="com.ags.financemanager.activities.fragments.DespesasFragment">

    <!--Receita Label-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/add_desc_despesas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <!--Receita Label-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/add_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <!--Receita Label-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/add_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinner_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipo_despesa"
        app:met_floatingLabel="normal" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_salvar_despesa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:textColor="@color/colorIcons"
        android:background="@color/colorAccent"
        android:text="@string/salvar"/>
</LinearLayout>