<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ags.financemanager.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_side"
        android:paddingRight="@dimen/padding_side"
        android:paddingTop="@dimen/padding_top"
        >

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:src="@drawable/ags_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edtLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_senha"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edtLoginSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEnviar"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_enviar"
            android:textColor="@color/colorIcons"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conta"
            android:textAlignment="center"

            />
    </LinearLayout>
</ScrollView>